# py2r

./: .gitignore  Dockerfile  README.md  UNIFIED_BACKEND_SETUP.md  blueskyparser.py  console.py  console.spec  consoleMac.spec  consoleWin.spec  console_http.py  data_converter.py  docker-compose.yml  packages.R  pyproject.toml  rDataset.py  rDriver.py  rUtils.py  r_libraries.R  r_libraries_unix.R  requirements.txt  server.py  test_docker.py
py2r/: blueskyparser.py  config.py  data_converter.py  git_market.py  pyConsole.py  pylogger.py  rDataset.py  rDriver.py  rUtils.py
tests/: test_bskyformat.py  test_datasets.py  test_opendataset.py  test_simple_out.py
